--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "add": "^2.0.6",
     "button": "^1.1.1",
@@ -19,7 +21,9 @@
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "separator": "^0.1.0",
     "shadcn-ui": "^0.8.0",
+    "sheet": "^0.2.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
