--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env PAYLOAD_CONFIG_PATH-src/payload.config.ts nodemon",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,9 +16,13 @@
     "button": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "init": "^0.1.2",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
+    "nodemon": "^3.1.0",
+    "payload": "^2.13.0",
     "react": "^18",
     "react-dom": "^18",
     "separator": "^0.1.0",
@@ -28,6 +32,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
