--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PAYLOAD_SECRET=mysecret
+MONGODB_URL=mongodb+srv://admin:WebDeveloper2021@cluster0.wqbu0ah.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+NEXT_PUBLIC_SERVER_URL=http://localhost:3000
