--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@payloadcms/bundler-webpack": "^1.0.6",
     "@payloadcms/db-mongodb": "^1.5.0",
     "@payloadcms/richtext-slate": "^1.5.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "add": "^2.0.6",
@@ -22,16 +24,20 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "init": "^0.1.2",
+    "input": "^1.0.1",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
     "payload": "^2.13.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "separator": "^0.1.0",
     "shadcn-ui": "^0.8.0",
     "sheet": "^0.2.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
