Finishing our auth flow

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PAYLOAD_SECRET=mysecret
-MONGODB_URL=mongodb+srv://admin:WebDeveloper2021@cluster0.wqbu0ah.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URL=mongodb+srv://admin:WebDeveloper2021@cluster0.w5uyjph.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0s
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
