--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PAYLOAD_SECRET=mysecret
 MONGODB_URL=mongodb+srv://admin:WebDeveloper2021@cluster0.w5uyjph.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0s
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+RESEND_API_KEY=re_FTQbrSSz_MhkaXerPAgB2zN8x5MqeZuuJ
