--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "input": "^1.0.1",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
+    "nodemailer": "^6.9.13",
     "payload": "^2.13.0",
     "react": "^18",
     "react-dom": "^18",
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "cross-env": "^7.0.3",
