Showing products in our store, AirBnB-style image slider

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "shadcn-ui": "^0.8.0",
     "sheet": "^0.2.0",
     "sonner": "^1.4.41",
+    "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.4"
